--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,9 +4,13 @@
 <h1>Home</h1>
 
 <div>
+    <a href={% url "create-room" %}>Create Room</a>
+    <hr>
     <div>
         {% for room in rooms %}
-            <div>
+        <div>
+                <a href={% url 'update-room' room.id %} >Edit</a>
+                <a href={% url "delete-room" room.id %}>Delete</a>
                 <span>@{{room.host.username}}</span>
                 <h4>{{room.id}} -- <a href={% url "room" room.id %}>{{room.name}}</a></h4>
                 <small>{{room.topic.name}}</small>
