--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,24 +1,53 @@
 {% extends "main.html" %}
 
 {% block content %}
+
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
+
+
 <h1>Home</h1>
 
-<div>
-    <a href={% url "create-room" %}>Create Room</a>
+<div class="home-container">
+    <div>
+        <h3>Browse Topics</h3>
+        <hr>
+        
+        <a href={% url "home"  %}>All</a>
+        {% for topic in topics  %}
+        <div>
+            <a href='{% url "home"  %}?q={{topic.name}}'>{{topic.name}}</a>
+        </div>
+        
+        {% endfor %}
+
+    </div>
+
+    <div>
+        <h5>Available Rooms: {{rooms_count}}</h5>
+        <a href='{% url "create-room" %}'>Create Room</a>
     <hr>
     <div>
         {% for room in rooms %}
         <div>
-                <a href={% url 'update-room' room.id %} >Edit</a>
-                <a href={% url "delete-room" room.id %}>Delete</a>
+                <a href='{% url 'update-room' room.id %}' >Edit</a>
+                <a href='{% url "delete-room" room.id %}'>Delete</a>
                 <span>@{{room.host.username}}</span>
-                <h4>{{room.id}} -- <a href={% url "room" room.id %}>{{room.name}}</a></h4>
+                <h4>{{room.id}} -- <a href='{% url "room" room.id %}'>{{room.name}}</a></h4>
                 <small>{{room.topic.name}}</small>
                 <hr>
             </div>
         
         {% endfor %}
     </div>
+    </div>
+
+
+    
 </div>
 
 {% endblock content %}
